add spark connector